# advent_of_code_2024

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml  ruff.toml
.github/workflows/: continuous_integration.yml
src/advent_of_code_2024/: day_1.py  day_2.py  day_template.py
tests/advent_of_code_2024/: test_day_1.py  test_day_2.py  test_day_template.py
